--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://smriti-sk.github.io/smritikumari",
   "private": true,
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
