--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-icons": "^4.9.0",
     "react-pdf": "^7.0.3",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "^2.1.3",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^2.1.3"
   },
   "type": "module",
   "scripts": {
@@ -55,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "web-vitals": "^3.3.2"
   }
 }
