--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bootstrap-icons": "^1.10.5",
     "font-awesome": "^4.7.0",
     "nodemon": "^2.0.22",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "^2.6.347",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -57,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "gh-pages": "^5.0.0",
     "web-vitals": "^3.3.2"
   }
