--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-iframe": "^1.8.5",
     "react-pdf": "^7.0.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^2.1.3"
